test/error/sema/duplicate-param-name.dsk
func f(x: int, x: string) -> void
    return
end
